add solution for game 2048 fix and add commit